--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,21 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Immich - Purchase License</title>
+    <meta name="theme-color" content="currentColor" />
+    <meta name="description" content="Buy a license to support Immich" />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Immich Licenses" />
+    <meta property="og:description" content="Buy a license to support Immich" />
+    <meta property="og:image" content="/img/social-preview.png" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Immich Licenses" />
+    <meta name="twitter:description" content="Buy a license to support Immich" />
+    <meta name="twitter:image" content="/img/social-preview.png" />
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
