--- a/apps/buy.immich.app/app.html
+++ b/apps/buy.immich.app/app.html
@@ -10,13 +10,13 @@
 
     <!-- Facebook Meta Tags -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Immich Licenses" />
+    <meta property="og:title" content="Buy Immich" />
     <meta property="og:description" content="Buy Immich to support the development effort" />
     <meta property="og:image" content="/img/social-preview.png" />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Immich Licenses" />
+    <meta name="twitter:title" content="Buy Immich" />
     <meta name="twitter:description" content="Buy Immich to support the development effort" />
     <meta name="twitter:image" content="/img/social-preview.png" />
     %sveltekit.head%
