--- a/apps/buy.immich.app/app.html
+++ b/apps/buy.immich.app/app.html
@@ -4,20 +4,20 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Immich - Purchase License</title>
+    <title>Immich - Purchase</title>
     <meta name="theme-color" content="currentColor" />
-    <meta name="description" content="Buy a license to support Immich" />
+    <meta name="description" content="Buy Immich to support the development effort" />
 
     <!-- Facebook Meta Tags -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Immich Licenses" />
-    <meta property="og:description" content="Buy a license to support Immich" />
+    <meta property="og:title" content="Buy Immich" />
+    <meta property="og:description" content="Buy Immich to support the development effort" />
     <meta property="og:image" content="/img/social-preview.png" />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Immich Licenses" />
-    <meta name="twitter:description" content="Buy a license to support Immich" />
+    <meta name="twitter:title" content="Buy Immich" />
+    <meta name="twitter:description" content="Buy Immich to support the development effort" />
     <meta name="twitter:image" content="/img/social-preview.png" />
     %sveltekit.head%
   </head>
