feat: dark mode for buy.immich.app

--- a/apps/buy.immich.app/app.html
+++ b/apps/buy.immich.app/app.html
@@ -21,7 +21,7 @@
     <meta name="twitter:image" content="/img/social-preview.png" />
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover">
+  <body data-sveltekit-preload-data="hover" class="dark bg-light text-dark">
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
