fix: my.immich.app meta title

--- a/apps/my.immich.app/routes/app.html
+++ b/apps/my.immich.app/routes/app.html
@@ -10,13 +10,13 @@
 
     <!-- Facebook Meta Tags -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Buy Immich" />
+    <meta property="og:title" content="My Immich App" />
     <meta property="og:description" content="Immich link proxy to redirect to your personal instance" />
     <meta property="og:image" content="/img/social-preview.png" />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Buy Immich" />
+    <meta name="twitter:title" content="My Immich App" />
     <meta name="twitter:description" content="Immich link proxy to redirect to your personal instance" />
     <meta name="twitter:image" content="/img/social-preview.png" />
     %sveltekit.head%
