fix: site title and og description

--- a/apps/get.immich.app/routes/app.html
+++ b/apps/get.immich.app/routes/app.html
@@ -4,20 +4,32 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Immich - My Immich App</title>
+    <title>Immich</title>
     <meta name="theme-color" content="currentColor" />
-    <meta name="description" content="Get Immich" />
+    <meta
+      name="description"
+      content="Self-hosted photo and video management solution. Easily back up, organize, and manage your photos on your own server. Immich helps you
+browse, search and organize your photos and videos with ease, without sacrificing your privacy."
+    />
 
     <!-- Facebook Meta Tags -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Get Immich" />
-    <meta property="og:description" content="Get Immich" />
+    <meta
+      property="og:description"
+      content="Self-hosted photo and video management solution. Easily back up, organize, and manage your photos on your own server. Immich helps you
+browse, search and organize your photos and videos with ease, without sacrificing your privacy."
+    />
     <meta property="og:image" content="/img/social-preview.png" />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Buy Immich" />
-    <meta name="twitter:description" content="Get Immich" />
+    <meta
+      name="twitter:description"
+      content="Self-hosted photo and video management solution. Easily back up, organize, and manage your photos on your own server. Immich helps you
+browse, search and organize your photos and videos with ease, without sacrificing your privacy."
+    />
     <meta name="twitter:image" content="/img/social-preview.png" />
     %sveltekit.head%
   </head>
