--- a/apps/root.immich.app/routes/app.html
+++ b/apps/root.immich.app/routes/app.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="currentColor" />
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover" class="dark bg-light text-dark">
+  <body data-sveltekit-preload-data="hover">
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
