feat: blog feed

--- a/apps/root.immich.app/routes/app.html
+++ b/apps/root.immich.app/routes/app.html
@@ -5,6 +5,9 @@
     <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="currentColor" />
+    <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="/blog/feed.xml" />
+    <link rel="alternate" type="application/atom+xml" title="Atom Feed" href="/blog/atom.xml" />
+    <link rel="alternate" type="application/json" title="JSON Feed" href="/blog/feed.json" />
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover" class="dark bg-light text-dark">
