fix: show correct logo on first load, add light mode screenshots and QR code (#218)
* fix: light screenshot and qr code

* fix: show correct logo on first load, add light screenshots and light QR code

* fix: dark mode fix

* fix: theme deleting, run prettier

* fix: replace image tags with ThemedImage component for better theme handling

* refactor(ui): inline themed images with $derived(theme.value); default to light pre-mount

* fix: simplify theme handling by removing unnecessary derived state for dark mode

* chore: cleanup & improve

---------

Co-authored-by: Jason Rasmussen <jason@rasm.me>

--- a/apps/root.immich.app/routes/app.html
+++ b/apps/root.immich.app/routes/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
@@ -9,8 +9,42 @@
     <link rel="alternate" type="application/atom+xml" title="Atom Feed" href="/blog/atom.xml" />
     <link rel="alternate" type="application/json" title="JSON Feed" href="/blog/feed.json" />
     %sveltekit.head%
+    <style>
+      /* prevent FOUC */
+      html {
+        height: 100%;
+        width: 100%;
+      }
+
+      body,
+      html {
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+    <script>
+      /**
+       * Prevent FOUC on page load.
+       */
+      const THEME_KEY = 'immich-ui-theme';
+      let value;
+      try {
+        value = JSON.parse(localStorage.getItem(THEME_KEY)).value;
+        if (value !== 'light' && value !== 'dark') {
+          value = undefined;
+        }
+      } catch {
+        // noop
+      }
+
+      if (value === 'light') {
+        document.documentElement.classList.remove('dark');
+        document.documentElement.classList.add('light');
+      }
+    </script>
   </head>
-  <body data-sveltekit-preload-data="hover" class="dark bg-light text-dark">
+
+  <body data-sveltekit-preload-data="hover" class="bg-light text-dark">
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
